@@ -19,7 +19,11 @@ Changes in version 0.1.2.7-alpha - 2007-02-06
     - Install as NT_AUTHORITY\LocalService rather than as SYSTEM; add a
       command-line flag so that admins can override the default by saying
       "tor --service install --user "SomeUser"".  This will not effect
-      existing installed services.
+      existing installed services.  Also, warn the user that the service
+      will look for its configuration file in the service user's
+      %appdata% directory.  (We can't do the 'hardwire the user's appdata
+      directory' trick any more, since we may not have read access to that
+      directory.)
 
   o Major bugfixes (other):
     - Previously, we would cache up to 16 old networkstatus documents
